DataModel generator class addedd with unit test cases

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "autoload": {
     "psr-4": {
       "App\\": "app/",
-      "Test\\": "tests/"
+      "Tests\\": "tests/"
     }
   },
   "authors": [
