--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
+    "php": ">=8.0",
     "illuminate/database": "^11.0@dev"
   },
   "require-dev": {
