--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "mubasharkk/plana-task",
   "description": "",
   "type": "plugin",
+  "license": "MIT",
   "autoload": {
     "psr-4": {
       "App\\": "app/",
@@ -21,5 +22,10 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^10.1@dev"
+  },
+  "scripts": {
+    "test": [
+      "vendor/bin/phpunit tests/Unit/"
+    ]
   }
 }
